--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
     
 - task: Docker@2
   inputs:
-    containerRegistry: 'azurecontainerregistry215'
-    repository: 'dotnetproject'
+    containerRegistry: 'donetprojectsc'
+    repository: 'swethadotnetproject'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
